--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,29 +11,33 @@ body {
 }
 
 header {
-	border-bottom: 1px solid #1c1e22;
-	padding-bottom: 20px;
+	background-color: #2c3e50;
+	padding-top: 20px;
+	padding-bottom: 5px;
 	margin-bottom: 10px;
-}
-
-.main-container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+	color: #fff;
 }
 
 .container {
+	margin-right: auto;
+  	margin-left: auto;
+  	padding-right: 15px;
+  	padding-left: 15px;
+}
+
+#gameSection, #intro {
 	background-color: #ecf0f1;
 	padding: 15px;
 }
-
 #gameSection {
 	display: none;
 }
 
 #gameHeader {
-	height: 70px;
+	height: 60px;
+	border-bottom: 1px solid #2c3e50;
+	padding-bottom: 0;
+	margin-bottom: 30px;
 }
 
 #gameHeader p{
@@ -52,6 +56,17 @@ header {
 
 #question{
 	text-align: center;
+	padding: 20px 8px;
+    margin-bottom: 0px;
+    background-color: #0e75b9;
+    color: #fff;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+}
+
+#msg {
+	display: none;
+	text-align: center;
 }
 
 #choices {
@@ -59,9 +74,23 @@ header {
 }
 
 .choice {
-	margin-bottom: 15px;
-	text-align: center;
 	cursor: pointer;
+    position: relative;
+    display: block;
+    padding: 8px 8px;
+    margin-bottom: -1px;
+    background-color: #ffffff;
+    border: 1px solid #ecf0f1;
+}
+
+.choice:last-child{
+	margin-bottom: 0;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.choice:hover{
+	color: #999;
 }
 
 .btn {
@@ -112,13 +141,58 @@ h3 {
 }
 
 @media (min-width: 768px) {
-  	.main-container {
+  	.container {
     	width: 750px;
   	}
 }
 
 @media (min-width: 992px) {
-  	.main-container {
+  	container {
     	width: 970px;
   	}
+}
+
+#intro h2{
+	margin-top: 4px;
+	margin-bottom: 4px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+label {
+  display: block;
+  background: white;
+  border: 1px solid #0e75b9;
+  border-radius: 2px;
+  padding: 10px;
+  margin-bottom: 28px;
+  text-align: center;
+  box-shadow: 0px 3px 10px -2px rgba(161, 170, 166, 0.5);
+  position: relative;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + label {
+  background: #3498db;
+  color: white;
+}
+input[type="radio"]:checked + label::after {
+  color: #3d3f43;
+  font-family: FontAwesome;
+  border: 2px solid #0e75b9;
+  content: "\f00c";
+  font-size: 20px;
+  position: absolute;
+  top: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 35px;
+  width: 35px;
+  line-height: 35px;
+  text-align: center;
+  border-radius: 50%;
+  background: white;
+  box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.25);
 }
