--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ header {
 #gameSection, #intro {
 	background-color: #ecf0f1;
 	padding: 15px;
+	min-height: 355px;
 }
 #gameSection {
 	display: none;
