--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ header {
 	line-height: 1.33;
 	border-radius:6px;
 	color: #fff;
-	border:1px solid #3e4245;
+	border:1px solid #62c462;
 	margin-bottom: 5px;
 	font-weight: 400px;
 	text-align: center;
@@ -111,7 +111,6 @@ header {
 
 #play, #playAgain {
 	background-color: #62c462;
-    border-color: #62c462;
     margin-top: 30px;
     margin-right: auto;
     margin-left: auto; 
@@ -119,6 +118,26 @@ header {
 
 #playAgain {
 	display: none;
+}
+
+.correct, .wrong {
+	font-size: 42px;
+	line-height: 80px;
+	background-repeat: no-repeat;
+	background-position: left top, right bottom;
+	margin-right: auto;
+	margin-left: auto;
+	text-align: right;
+}
+
+.correct {
+	background-image: url("../images/ok.png");
+	width: 260px;
+}
+
+.wrong {
+	background-image: url("../images/wrong.png");
+	width: 210px;
 }
 
 h1, h2, h3 {
@@ -141,17 +160,6 @@ h3 {
 	font-size: 24px;
 }
 
-@media (min-width: 768px) {
-  	.container {
-    	width: 750px;
-  	}
-}
-
-@media (min-width: 992px) {
-  	container {
-    	width: 970px;
-  	}
-}
 
 #intro h2{
 	margin-top: 4px;
@@ -196,4 +204,16 @@ input[type="radio"]:checked + label::after {
   border-radius: 50%;
   background: white;
   box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.25);
+}
+
+@media (min-width: 768px) {
+  	.container {
+    	width: 750px;
+  	}
+}
+
+@media (min-width: 992px) {
+  	container {
+    	width: 970px;
+  	}
 }
